examples/test/testpolicy15509.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15509
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key24: value15
      key48: value45
      key13: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value0
          key32: value27
          key33: value20
